# fallout-tests

./: .gitignore  AGENTS.md  README.md  action.sh  action.yml  init.sh  pyproject.toml  requirements-dev.txt
.github/workflows/: build.yml  lint.yml
scripts/: action.py  dialogs.py  lvars.py  scripts_lst.py  worldmap.py
tests/: conftest.py  test_action.py  test_dialogs.py  test_lvars.py  test_scripts_lst.py  test_worldmap.py
tests/fixtures/: generic.msg  sample.msg  sample.ssl  sample_lvars.ssl  scripts.h  scripts.lst  scripts_lvars.lst  worldmap.txt
vscode/: settings.json
