[project]
name = "fallout-tests"
version = "0.1.0"
description = "Fallout tests"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mypy>=1.17.0",
    "pylint>=3.3.7",
    "ruff>=0.12.5",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["I"]  # Enable import sorting

[tool.ruff.lint.isort]
combine-as-imports = true
force-sort-within-sections = true

[tool.pylint.format]
max-line-length = 120
