[project]
name = "fallout-tests"
version = "0.1.0"
description = "Fallout tests"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ruff>=0.12.5",
    "ty>=0.0.1a1",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["I", "PL", "UP", "B", "SIM"]

[tool.ruff.lint.isort]
combine-as-imports = true
force-sort-within-sections = true
