[project]
name = "fallout-tests"
version = "0.1.1"
description = "Fallout tests"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.12.5",
    "ty>=0.0.1a1",
]

[tool.ty.environment]
# scripts/ is not a package; add it as a search path so ty can resolve the validator modules
extra-paths = ["scripts"]

[tool.pyright]
extraPaths = ["scripts"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["integration: tests against real Fallout modding data (requires network)"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["I", "PL", "UP", "B", "SIM"]

[tool.ruff.lint.isort]
combine-as-imports = true
force-sort-within-sections = true
